--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NMedia</string>
+    <string name="author">Netology. University of internet-professionnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn</string>
+    <string name="published">20 july 2022 year at 18:00</string>
+    <string name="post_text">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
+    <string name="netology_avatar">Netology avatar</string>
+    <string name="show_more_button">show more button</string>
 </resources>
