--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">НМедиа</string>
+    <string name="author">Нетология. Университет интернет-профессий</string>
+    <string name="published">20 июля 2022 года в 18:00</string>
+    <string name="post_text">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
+    <string name="netology_avatar">Нетология аватар</string>
+    <string name="show_more_button">кнопка "подробнее"</string>
 </resources>
