--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,12 @@
     <string name="post_text">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
     <string name="netology_avatar">Netology avatar</string>
     <string name="show_more_button">show more button</string>
+    <string name="like_icon">Like</string>
+    <string name="comment_icon">Comment</string>
+    <string name="reply_icon">Reply</string>
+    <string name="visibility_icon">Visibility</string>
+    <string name="visibility_count">12,4K</string>
+    <string name="like_count">59</string>
+    <string name="comments_count">17</string>
+    <string name="share_count">5</string>
 </resources>
