RU string file updated text

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="author">Нетология. Университет интернет-профессий</string>
     <string name="published">20 июля 2022 года в 18:00</string>
     <string name="post_text">
-        Привет? это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы астем сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остается с нами: Мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен. http://netolo.gy/fyb
+        Привет. Это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы астем сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остается с нами: Мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен. http://netolo.gy/fyb
     </string>
     <string name="netology_avatar">Нетология аватар</string>
     <string name="show_more_button">кнопка "подробнее"</string>
