--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,17 +3,18 @@
     <string name="app_name">НМедиа</string>
     <string name="author">Нетология. Университет интернет-профессий</string>
     <string name="published">20 июля 2022 года в 18:00</string>
-    <string name="post_text">
-        Привет. Это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы астем сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остается с нами: Мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен. http://netolo.gy/fyb
-    </string>
     <string name="netology_avatar">Нетология аватар</string>
-    <string name="show_more_button">кнопка "подробнее"</string>
-    <string name="like_icon">Нравится</string>
-    <string name="comment_icon">Комментарий</string>
-    <string name="reply_icon">Реплай</string>
-    <string name="visibility_icon">Просмотрено</string>
+    <string name="description_post_menu_button">Меню поста</string>
+    <string name="description_post_like">Нравится</string>
+    <string name="description_post_comment">Комментарий</string>
+    <string name="description_post_share">Поделиться</string>
+    <string name="description_post_visibility">Просмотрено</string>
     <string name="visibility_count">12,4K</string>
     <string name="like_count">78</string>
     <string name="comments_count">6</string>
     <string name="share_count">5</string>
+    <string name="remove">Удалить</string>
+    <string name="save_button">Сохранить</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="post_text">" Текст поста"</string>
 </resources>
