--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="description_edit_avatar">Edit mode</string>
     <string name="description_cancel_button">Cancel</string>
     <string name="post_to_be_edited">Post to be edited</string>
+    <string name="description_post_save">Save</string>
 </resources>
