--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,4 +21,5 @@
     <string name="description_edit_avatar">Редактирование</string>
     <string name="description_cancel_button">Отменить</string>
     <string name="post_to_be_edited">Редактируемый пост</string>
+    <string name="description_post_save">Сохранить</string>
 </resources>
