--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,4 +22,5 @@
     <string name="description_cancel_button">Отменить</string>
     <string name="post_to_be_edited">Редактируемый пост</string>
     <string name="description_post_save">Сохранить</string>
+    <string name="error_empty_content">Контент не может быть пустым</string>
 </resources>
