--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="description_cancel_button">Cancel</string>
     <string name="post_to_be_edited">Post to be edited</string>
     <string name="description_post_save">Save</string>
+    <string name="error_empty_content">Content can\'t be empty</string>
 </resources>
