add & edit post in One Activity fixed

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,4 +23,5 @@
     <string name="post_to_be_edited">Post to be edited</string>
     <string name="description_post_save">Save</string>
     <string name="error_empty_content">Content can\'t be empty</string>
+    <string name="enter_new_post_text">Enter new post text here</string>
 </resources>
